unpackaged/main/default/objects/Deal_Team__c/Deal_Team__c.object-meta.xml
<CustomObject>
    <label>Deal Team</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Deal Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>