unpackaged/main/default/objects/Deal_Team__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Deal Team</relationshipLabel>
    <relationshipName>Deal_Team</relationshipName>
    <type>Lookup</type>
</CustomField>