unpackaged/main/default/objects/Deal_Team__c/fields/Deal_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact_Type__c</fullName>
    <label>Deal Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our Advisor</fullName>
            </value>
            <value>
                <fullName>Company Team</fullName>
            </value>
            <value>
                <fullName>Company Advisor</fullName>
            </value>
            <value>
                <fullName>Intermediary Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>