unpackaged/main/default/objects/Deal_Team__c/fields/Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Role__c</fullName>
    <label>Team Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Company Executive</fullName>
            </value>
            <value>
                <fullName>Company Staff</fullName>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Client Staff</fullName>
                <isActive>false</isActive>
                <label>Client Staff</label>
            </value>
            <value>
                <fullName>HR &amp; Management</fullName>
                <isActive>false</isActive>
                <label>HR &amp; Management</label>
            </value>
            <value>
                <fullName>Lawyer</fullName>
                <isActive>false</isActive>
                <label>Lawyer</label>
            </value>
            <value>
                <fullName>Tax</fullName>
                <isActive>false</isActive>
                <label>Tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>