unpackaged/main/default/objects/Deal_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Team_Member_Role__c</columns>
    <columns>Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>